edition = "2023";
package graph;

option go_package = "/proto";

import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

enum NodeType {
  UNRECOGNIZED  = 0;
  FREE = 1;
  MAIN = 2;
  CENTRAL = 3;
  MALL = 4;
  TRANSIT = 5;
  RESERVATION = 6;
  LOSES = 7;
  MARKETING = 8;
  EXPOSITION = 9;
  PARTNER = 10;
  PARTNER2 = 11;
  FREE2 = 12;
  PROBLEM = 13;
  REFUND = 14;
  PRODUCTION = 15;
  RECYCLING = 16;
  SERVICE = 17;
  MATERIAL = 18;
  MARKDOWN = 19;
  BUFFER = 20;
  DISCOUNT = 21;
  CENTRAL_MAIN_INTERMEDIATE = 22;
  MAIN_CENTRAL_INTERMEDIATE = 23;
  CENTRAL_FREE_INTERMEDIATE = 24;
  FREE_CENTRAL_INTERMEDIATE = 25;
}

message Node {
  string id = 1;
  string name = 2;
  NodeType type = 3;
  string time_zone = 4;
  bool available_rest = 5;
  int32 level = 6;
  string address = 7;
  bool only_stock_pickup_allowed = 8;
  string DescriptorGroup = 9;
}
message Path {
  repeated Node nodes = 1;
}

message GetPath {
  string id = 1;
  string default_warehouse_id = 2;
}

message DeliveryPathRequest {
  repeated Node node = 1;
  Node from = 2;
  Node to = 3;
}

message DeliveryPath {
  Node first = 1;
  Node last = 2;
  Path path = 3;
}

message DeliveryPathResult {
  bool success = 1;
  DeliveryPath delivery_path = 2;
}

service PathService {
  rpc Get(GetPath) returns(Path);
  rpc GetDeliveryPath(DeliveryPathRequest) returns(DeliveryPathResult);
}